--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=go
-*.html linguist-language=go
-*.css linguist-language=go
+*.js linguist-language=javascript
+*.html linguist-language=html
+*.css linguist-language=css
